RESOLVED FIXED200979
REGRESSION: naver.com - Multiple taps are required to open email
https://bugs.webkit.org/show_bug.cgi?id=200979
Summary REGRESSION: naver.com - Multiple taps are required to open email
Antoine Quint
Reported 2019-08-21 07:53:11 PDT
REGRESSION: naver.com - Multiple taps are required to open email
Attachments
Patch (2.09 KB, patch)
2019-08-21 07:55 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2019-08-21 07:55:54 PDT
Antoine Quint
Comment 2 2019-08-21 07:55:59 PDT
WebKit Commit Bot
Comment 3 2019-08-21 09:52:52 PDT
Comment on attachment 376878 [details] Patch Clearing flags on attachment: 376878 Committed r248944: <https://trac.webkit.org/changeset/248944>
WebKit Commit Bot
Comment 4 2019-08-21 09:52:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.