REGRESSION: naver.com - Multiple taps are required to open email https://bugs.webkit.org/show_bug.cgi?id=200979 <rdar://problem/54295239>

Patch by Antoine Quint <graouts@apple.com> on 2019-08-21
Reviewed by Dean Jackson.

The "click" events on subjects in the message list are prevented by preventDefault() being called from a "mouseup" event listener.
This shouldn't actually happen, but due to how simulated mouse events are implemented, there is no current distinction between
"touchend" and "mouseup" events. It is safe however to opt mail.naver.com out of simulated mouse events altogether.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):

Canonical link: https://commits.webkit.org/214691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248944 268f45cc-cd09-0410-ab3c-d52691b4dbfc